# py.scripts

./: .gitignore  LICENSE  Makefile  README.md  async_example.py  auto_clicker.py  click.py  clicker.py  coin_change.py  cpu_temp_graph.py  custom_cache_keys.py  dataclass_codegen.py  decorators.py  dict_operations.py  first_missing_int.py  func_param_inspect.py  functools_src.py  git_root.py  inspect_sandbox.py  list_comp_dis.py  loop.py  memoized_fibonacci.py  mongodb_object_id.py  no_str_sequence_arg.py  null_byte.py  object_pool.py  open_browser.py  pydantic_singleton_settings.py  pyndatic_singleton_settings.py  pyproject.toml  scoped_session.py  sieve.py  simple_singleton.py  spongebob.py  star_pyramid.py  test_aiohttp_mock.py  youtube.py
New_Project_Tool/: .gitignore  Pipfile  README.md  creator.py  requirements.txt
New_Project_Tool/src/: __init__.py  app.py  args.py  factory.py
New_Project_Tool/src/cli_obj/: __init__.py  _base.py  cpp.py  dotnet.py  pyproj.py  rust.py
New_Project_Tool/test/: ideas.py  test_config_file.py
Oauth-Checker/: .gitignore  Pipfile  app.data.json  oauth-checker.py
Oauth-Checker/src/: helpers.py  main.py  requests_fn.py
StackOverflow2019DataAnyalysis/: .gitignore
StackOverflow2019DataAnyalysis/src/: Stack Overflow Survey Notes.ipynb  app.py  app_panda.py
farm_stack/: README.md
farm_stack/backend/: README.md  database.py  main.py  pyproject.toml
farm_stack/frontend/: package-lock.json  package.json
farm_stack/frontend/src/: App.css  App.js  common.js
farm_stack/frontend/src/components/: todo.js  todoListView.js
fastapi-tut/: Pipfile  README.md  body_and_validations.py  main.py
fastapi_graphql_example/: README.md  hello.py
flask-org-tutorial/flaskr/: db.py
flask/corey-flask-tutor/: flaskblog.py
flask/first_api/src/: routes.py
flask/flask-org-tutorial/flaskr/: __init__.py  auth.py
ipython-in-depth/: 1 - Beyond Plain Python.ipynb  log.py  outline.md  package-lock.json  readme.md  setup.sh
jupyter-demo/: README.md
jupyter-demo/.ipynb_checkpoints/: hello-jupyter-checkpoint.ipynb
jupyter_demo/: hello-jupyter.ipynb
numpy/: numpy-tut.ipynb  pyproject.toml
oauth_checker/: Pipfile  README.md  app.data.json  oauth-checker.py  pyproject.toml
oauth_checker/oauth_checker/: requests_fn.py
oauth_checker/src/: __init__.py  config.py  helpers.py
pysimplegui_demo/: .img_viewer.py.swp  Pipfile  hello_simple_gui.py  img_viewer.py  pyproject.toml
stack_overflow_data_analysis/: .gitignore  README.md
stack_overflow_data_analysis/src/: Stack Overflow Survey Notes.ipynb
