[tool.poetry]
name = "py.scripts"
version = "0.1.0"
description = ""
authors = ["fitzypop <fitzypop@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
devtools = "^0.12"
pydantic = "^2.8.2"
bson = "^0.5.10"
requests = "^2.32.3"
PySimpleGUI = "^5"
orjson = "^3.10.6"
SQLAlchemy = "^1.4.39"
aiohttp = "^3.9.5"
flask = "^3.0.3"
matplotlib = "^3"
psutil = "^6.0.0"
pydantic-settings = "^2.3.4"
cachetools = "^5.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
