[tool.poetry]
name = "py.scripts"
version = "0.1.0"
description = ""
authors = ["fitzypop <fitzypop@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "*"
bson = "^0.5.10"
cachetools = "^5.4.0"
devtools = "^0.12"
flask = "^3.0.3"
matplotlib = "^3"
orjson = "^3.10.6"
psutil = "^6.0.0"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
PySimpleGUI = "^5"
requests = "*"
SQLAlchemy = "^1.4.39"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
