[project]
name = "py.scripts"
version = "0.1.0"
description = ""
authors = [{ name = "fitzypop", email = "fitzypop@pm.me" }]
requires-python = "~=3.10"
dependencies = [
    "aiohttp",
    "bson>=0.5.10,<0.6",
    "cachetools>=5.4.0,<6",
    "devtools>=0.12,<0.13",
    "flask>=3.0.3,<4",
    "matplotlib>=3,<4",
    "orjson>=3.10.6,<4",
    "psutil>=6.0.0,<7",
    "pydantic>=2.8.2,<3",
    "pydantic-settings>=2.3.4,<3",
    "PySimpleGUI>=5,<6",
    "requests",
    "SQLAlchemy>=1.4.39,<2",
]

[dependency-groups]
dev = ["pytest>=8.3.2,<9", "pytest-asyncio>=0.23.8,<0.24", "ruff"]

[tool.pyright]
venvPath = "."
venv = ".venv"
