[tool.poetry]
name = "oauth_checker"
version = "0.1.0"
description = ""
authors = ["fitzypop <fitzypop@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
orjson = "^3.9.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
