[tool.poetry]
name = "pysimplegui_demo"
version = "0.1.0"
description = ""
authors = ["fitzypop <fitzypop@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
