[tool.poetry]
name = "farm_stack"
version = "0.1.0"
description = ""
authors = ["Joe Fitzgibbons <joe.fitzgibbons@ruralsourcing.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
motor = "^2.5.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.7b0", allow-prereleases = true}
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
